--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,36 @@
 spring.application.name=lz-gambling
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/GAMBLING
-spring.datasource.username=postgres
-spring.datasource.password=457913
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gambling
+#spring.datasource.username=postgres
+#spring.datasource.password=12345
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-#spring.datasource.username=sa
-#spring.datasource.password=sa
+#######################
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA (Hibernate) Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#######################
+
+
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:schema.sql
+
+# Flyway properties (optional)
+flyway.baseline-on-migrate=false
+flyway.baseline-version=0
