--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,14 +1,7 @@
-spring.application.name=lz-gambling
-server.port=8080
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gambling
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-#spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath:schema.sql
-
-# Flyway properties (optional)
-flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
