--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,16 +101,22 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+          
       - name: Login Docker Hub
         run: sudo docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+        
       - name: verifica o login do docker
         run: sudo docker info
+        
       - name: Pull na imagem
         run: sudo docker pull ozamboni/lz-gambling:main-231d4ec
+        
+      # - name: Run docker container
+      #   run: sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:main-231d4ec
       - name: Run docker container
-        run: sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:main-231d4ec
+        run: sudo docker stop gambling || true && sudo docker rm gambling || true && sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:main-231d4ec
