--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,9 +114,9 @@ jobs:
         run: sudo docker info
         
       - name: Pull na imagem
-        run: sudo docker pull ozamboni/lz-gambling:main-231d4ec
+        run: sudo docker pull ozamboni/lz-gambling:latest
         
       # - name: Run docker container
-      #   run: sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:main-231d4ec
+      #   run: sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:latest
       - name: Run docker container
-        run: sudo docker stop gambling || true && sudo docker rm gambling || true && sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:main-231d4ec
+        run: sudo docker stop gambling || true && sudo docker rm gambling || true && sudo docker run -d -p 8080:8080 --name gambling ozamboni/lz-gambling:latest
